--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>com.github.dozermapper</groupId>
-            <artifactId>dozer-core</artifactId>
-            <version>6.4.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.github.dozermapper</groupId>-->
+            <!--<artifactId>dozer-core</artifactId>-->
+            <!--<version>6.4.1</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -34,17 +34,17 @@
             <version>4.5.8</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.47</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba</groupId>-->
+            <!--<artifactId>fastjson</artifactId>-->
+            <!--<version>1.2.47</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.19</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.yaml</groupId>-->
+            <!--<artifactId>snakeyaml</artifactId>-->
+            <!--<version>1.19</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 
