--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,15 @@
             <version>4.5.8</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>cglib</groupId>-->
+            <!--<artifactId>cglib</artifactId>-->
+            <!--<version>3.2.5</version>-->
+        <!--</dependency>-->
+
         <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>3.2.5</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
