--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>4.5.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>cglib</groupId>-->
             <!--<artifactId>cglib</artifactId>-->
