--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,18 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.47</version>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.24.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.26</version>
+        </dependency>
+    </dependencies>
 
 </project>
